--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1 class="display-3">Elia Bellussi</h1>
-  <p class="lead">Design Thinking | Scenario Planning | Open Innovation | Data Strategy and Analytics | Mentoring</p>
+  <p class="lead">Innovation Strategist @ EGI Foundation | Adjunct professor @ UniTo | MBA&MSc @ Hult | Driving Sustainable Change</p>
   <hr class="my-4">
   <p>To download my cv/resume click the button below.</p>
   <p class="lead">
@@ -18,26 +18,27 @@
     <div class="card mb-3">
       <div class="card-header">Certification</div>
       <div class="card-body">
-        <h4 class="card-title">ICO-CERT</h4>
-        <p class="card-text">27001:2022 Foundation</p>
+        <h4 class="card-title">APMG</h4>
+        <p class="card-text">FitSM Advanced Service Planning and Delivery - Trainer</p>
       </div>
     </div>
   </div>
-  <div class="col-lg-4">
+  <div class="row">
+    <div class="col-lg-4">
       <div class="card mb-3">
-      <div class="card-header">Business</div>
-      <div class="card-body">
-        <h4 class="card-title">Empethy</h4>
-        <p class="card-text">Investing</p>
+        <div class="card-header">Certification</div>
+        <div class="card-body">
+          <h4 class="card-title">APMG</h4>
+          <p class="card-text">FitSM Foundation - Trainer</p>
+        </div>
       </div>
     </div>
-  </div>
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Certification</div>
+      <div class="card-header">Job</div>
       <div class="card-body">
-        <h4 class="card-title">APMG</h4>
-        <p class="card-text">FitSM Advanced Service Planning and Delivery</p>
+        <h4 class="card-title">Adjunct Professor</h4>
+        <p class="card-text">History of Digital Technologies</p>
       </div>
     </div>
   </div>
@@ -48,7 +49,7 @@
     <div class="card mb-3">
       <h3 class="card-header">Discover me</h3>
       <div class="card-body">
-        <p class="card-text">Passionate about technology with 10+ years of experience: working in product management and project management with stakeholders and clients such as the Italian Public Sector, GE Avio Aero, Intesa Sanpaolo, Eutelsat. In my life, as an only child, I have to take care of my parents, both severely disabled. This, however, has not stopped me from pursuing what I set out to achieve.</p>
+        <p class="card-text">Passionate about technology with 13+ years of experience: working in product management and project management with stakeholders and clients such as the Italian Public Sector, GE Avio Aero, Intesa Sanpaolo, Eutelsat. In my life, as an only child, I have to take care of my parents, both severely disabled. This, however, has not stopped me from pursuing what I set out to achieve.</p>
       </div>
     </div>
   </div>
@@ -59,7 +60,7 @@
     <div class="card mb-3">
       <h3 class="card-header">Support me</h3>
       <div class="card-body">
-        <p class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a>, with <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a>, with <strong>Bitcoin</strong>: 3AJTFQt62U9fyYHMbnyg49gM7Bq3YcwrwT or <strong>Ethereum</strong>: 0x3A56F64801B93085125Ce1E9aE2c1a45ce0C636c</p>  
+        <p class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a>, with <a href="https://www.satispay.com/download/qrcode/S6Y-CON--FD000511-303D-4D4D-8628-47D0-C322555E?" target="_blank">Satispay</a>, with <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a>, with <strong>Bitcoin</strong>: 3AJTFQt62U9fyYHMbnyg49gM7Bq3YcwrwT or <strong>Ethereum</strong>: 0x3A56F64801B93085125Ce1E9aE2c1a45ce0C636c</p>  
       </div>
     </div>
   </div>
