--- a/_includes/home.html
+++ b/_includes/home.html
@@ -36,8 +36,8 @@
     <div class="card mb-3">
       <div class="card-header">Job</div>
       <div class="card-body">
-        <h4 class="card-title">Adjunct Professor</h4>
-        <p class="card-text">History of Digital Technologies</p>
+        <h4 class="card-title">Università di Torino</h4>
+        <p class="card-text">Adjunct Professor in History of Digital Technologies</p>
       </div>
     </div>
   </div>
