--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" target="_blank" href="https://orcid.org/0000-0002-8623-9834">ORCID Profile</a>
+      </li>
     </ul>
   </div>
 </nav>
